Add new download buttons

--- a/searcher_downloads.html
+++ b/searcher_downloads.html
@@ -66,19 +66,19 @@
         <th width="125">Checksum</th>
         </tr>
       <tr>
-        <td><a href="@SEARCHER@"><img src="images/omero_searcher.png" alt="OMERO.searcher Download" /></a></td>
+        <td><a href="@SEARCHER@"><img src="images/searcher/omero_searcher.png" alt="OMERO.searcher download" /></a></td>
         <td align="center">@SEARCHER_SIZE@</td>
         <td>@SEARCHER_BASE@</td>
         <td align="center">@SEARCHER_MD5@ (<a href="@SEARCHER@.md5">MD5</a>)</td>
       </tr>
       <tr>
-        <td><a href="@PYSLID@"><img src="images/omero_searcher.png" alt="PYSLID Download" /></a></td>
+        <td><a href="@PYSLID@"><img src="images/searcher/pyslid.png" alt="pyslid download" /></a></td>
         <td align="center">@PYSLID_SIZE@</td>
         <td>@PYSLID_BASE@</td>
         <td align="center">@PYSLID_MD5@ (<a href="@PYSLID@.md5">MD5</a>)</td>
       </tr>
       <tr>
-        <td><a href="@RICERCA@"><img src="images/omero_searcher.png" alt="RICERCA Download" /></a></td>
+        <td><a href="@RICERCA@"><img src="images/searcher/ricerca.png" alt="ricerca download" /></a></td>
         <td align="center">@RICERCA_SIZE@</td>
         <td>@RICERCA_BASE@</td>
         <td align="center">@RICERCA_MD5@ (<a href="@RICERCA@.md5">MD5</a>)</td>
