Use new u-track button in u-track downloads page

--- a/utrack_downloads.html
+++ b/utrack_downloads.html
@@ -58,7 +58,7 @@
       <th width="120">Checksum</th>
       </tr>
     <tr>
-      <td><a href="@SOURCE_CODE@" target="_blank"><img src="images/ome_source_code.png" alt="Zipped Source Code" /></a></td>
+      <td><a href="@SOURCE_CODE@" target="_blank"><img src="images/utrack.png" alt="Zipped Source Code" /></a></td>
       <td align="center">@SOURCE_CODE_SIZE@</td>
       <td>@SOURCE_CODE_BASE@</td>
       <td align="center">@SOURCE_CODE_MD5@ (<a href="@SOURCE_CODE@.md5">MD5</a>)</td>
