--- a/utrack_downloads.html
+++ b/utrack_downloads.html
@@ -81,7 +81,7 @@
 
 <ul>
   <li>
-<p>We recommend that you always use the most recent release version of the u-track software, but if you need to use a previous version, they are all available from the main <a href="http://downloads.openmicroscopy.org/u-track/?C=M;O=D">downloads folder</a></p>.
+<p>We recommend that you always use the most recent release version of the u-track software, but if you need to use a previous version, they are all available from the main <a href="http://downloads.openmicroscopy.org/u-track/?C=M;O=D">downloads folder</a>.</p>
   </li>
 </ul>
   
