Remove forum post link

--- a/searcher_downloads.html
+++ b/searcher_downloads.html
@@ -42,7 +42,7 @@
 
 <ul>
 <li>
-<p>Information on this release of OMERO.searcher is in the <a href="@ANNOUCEMENT_URL@">release announcement</a>. </p>
+<p>OMERO.searcher provides the ability to search for images in OMERO by their content rather than just by their annotations. At present it is not recommended for production use.</p>
 </li>
 
 <li>
