--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -62,13 +62,13 @@
         <th width="125">Checksum</th>
         </tr>
       <tr>
-        <td><a href="@MTOOLS_WIN@"><img src="images/utrack.png" alt="Windows Client Download" /></a></td>
+        <td><a href="@MTOOLS_WIN@"><img src="images/omero_mtools_win.png" alt="Windows Client Download" /></a></td>
         <td align="center">@MTOOLS_WIN_SIZE@</td>
         <td>@MTOOLS_WIN_BASE@</td>
         <td align="center">@MTOOLS_WIN_MD5@ (<a href="@MTOOLS_WIN@.md5">MD5</a>)</td>
       </tr>
       <tr>
-        <td><a href="@MTOOLS_MAC@"><img src="images/utrack.png" alt="Mac OS X Client Download" /></a></td>
+        <td><a href="@MTOOLS_MAC@"><img src="images/omero_mtools_mac.png" alt="Mac OS X Client Download" /></a></td>
         <td align="center">@MTOOLS_MAC_SIZE@</td>
         <td>@MTOOLS_MAC_BASE@</td>
         <td align="center">@MTOOLS_MAC_MD5@ (<a href="@MTOOLS_MAC@.md5">MD5</a>)</td>
