Fix partner products page

--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -42,7 +42,7 @@
 
 <ul>
 <li>
-<p>OMERO.mtools is a suite of tools written in MATLAB for various analyses of images stored in an OMERO server. Please see  <a href="https://www.openmicroscopy.org/site/products/partner/omero.mtools/omero.mtools">here</a> for information.</p></li>
+<p>OMERO.mtools is a suite of tools written in MATLAB for various analyses of images stored in an OMERO server. Please see  <a href="https://www.openmicroscopy.org/site/products/partner/omero.mtools">here</a> for information.</p></li>
 <li><p>Choose the version of OMERO.mtools for your platform (Windows/Macintosh) below</p></li>
 <li><p>Ensure you have the correct MCR (MATLAB Compiler Runtime) installed on your system (currently 2013b, v8.2). If you do not, or are in any doubt, please also download the MCR for your platform below</p></li>
 <li><p>The MCR must be installed before running OMERO.mtools</p></li>
