--- a/flimfit_downloads.html
+++ b/flimfit_downloads.html
@@ -60,7 +60,7 @@
 </ul>
 </li>
 <li>
-    <p>Windows users please note that there is currently no pre-compiled binary for OME 5.0.x due to reported problems connecting to 5.0.0 servers from FLIMfit on some Windows variants. It is, however, possible to use FLIMfit from the Matlab source.</p>
+<p>Windows users please note that there is currently no pre-compiled binary for OME 5.0.x due to reported problems connecting to 5.0.0 servers from FLIMfit on some Windows variants. It is, however, possible to use FLIMfit from the Matlab source by following the link below.</p>
 </li>
 </ul>
 
