--- a/flimfit_downloads.html
+++ b/flimfit_downloads.html
@@ -57,10 +57,10 @@
 <li>
 <p>Users who intend to use FLIMfit without OMERO can download either version (for 4.4.x or 5.0.x) as there will be no difference in stand-alone mode.</p>
 </li>
-</ul>
+
 </li>
 <li>
-<p>Windows users please note that there is currently no pre-compiled binary for OME 5.0.x due to reported problems connecting to 5.0.0 servers from FLIMfit on some Windows variants. It is, however, possible to use FLIMfit from the Matlab source by following the link below.</p>
+<p>Windows users please note that there is currently no pre-compiled binary of 4.6.4 for OME 5.0.x due to reported problems connecting to 5.0.0 servers from FLIMfit on some Windows variants. It is, however, possible to use FLIMfit from the MATLAB source on GitHub by following the link below.</p>
 </li>
 </ul>
 
