--- a/flimfit_downloads.html
+++ b/flimfit_downloads.html
@@ -125,7 +125,7 @@
 
 <ul>
   <li>
-<p>We recommend that you always use the most recent release version of the FLIMfit software, but if you need to use a previous version,  they are all available from the main <a href="http://downloads.openmicroscopy.org/flimfit/?C=M;O=D">downloads folder</a></p>
+<p>We recommend that you always use the most recent release version of the FLIMfit software, but if you need to use a previous version,  they are all available from the main <a href="http://downloads.openmicroscopy.org/flimfit/?C=M;O=D">downloads folder</a>.</p>
   </li>
 </ul>
   
