Minor tidying of mtools page

--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        
+
         <link rel="stylesheet" href="images/plonematch.css" type="text/css">
         <meta charset="utf-8">
-          
-  
+
+
       <meta name="tags" contents="mtools">
-  
+
     <style type="text/css"></style><style>[touch-action="none"]{ -ms-touch-action: none; touch-action: none; }[touch-action="pan-x"]{ -ms-touch-action: pan-x; touch-action: pan-x; }[touch-action="pan-y"]{ -ms-touch-action: pan-y; touch-action: pan-y; }[touch-action="scroll"],[touch-action="pan-x pan-y"],[touch-action="pan-y pan-x"]{ -ms-touch-action: pan-x pan-y; touch-action: pan-x pan-y; }</style></head>
     <body id="index" class="home">
 
@@ -42,10 +42,10 @@
 
 <ul>
 <li>
-<p>OMERO.mtools is a suite of tools written in MATLAB for various analyses of images stored in an OMERO server. Please see  <a href="https://www.openmicroscopy.org/site/products/partner/omero.mtools">here</a> for information.</p></li>
-<li><p>Choose the version of OMERO.mtools for your platform (Windows/Macintosh) below</p></li>
-<li><p>Ensure you have the correct MCR (MATLAB Compiler Runtime) installed on your system (currently 2013b, v8.2). If you do not, or are in any doubt, please also download the MCR for your platform below</p></li>
-<li><p>The MCR must be installed before running OMERO.mtools</p></li>
+<p>OMERO.mtools is a suite of tools written in MATLAB for various analyses of images stored in an OMERO server. Please see the <a href="https://www.openmicroscopy.org/site/products/partner/omero.mtools">Product page</a> for information.</p></li>
+<li><p>Choose the version of OMERO.mtools for your platform (Windows/Mac) below.</p></li>
+<li><p>Ensure you have the correct MCR (MATLAB Compiler Runtime) installed on your system (currently 2013b, v8.2). If you do not, or are in any doubt, please also download the MCR for your platform below.</p></li>
+<li><p>The MCR must be installed before running OMERO.mtools.</p></li>
 <li><p>Once downloaded simply unzip and run. Running from a network drive is not recommended.</p></li>
 <li><p>Source code is available on <a href="https://github.com/mporter-gre/mtools">GitHub</a>.</p>
 </li>
@@ -101,7 +101,7 @@
 <p>We recommend that you always use the most recent release version of OMERO.mtools, but if you need to use a previous version,  they are all available from the main <a href="http://downloads.openmicroscopy.org/mtools/?C=M;O=D">downloads folder</a></p>
   </li>
 </ul>
-  
+
   </div><!-- /.entry-content -->
 </section>
         <footer id="contentinfo" class="body">
@@ -121,5 +121,5 @@
 		</div>
 		<div class="visualClear">
 		<!-- OME Footer - END -->
-	
+
 </div></div></body></html>
