Adding subsection links & legacy -> previous

--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -40,6 +40,9 @@
 
 <h2>OMERO.mtools @VERSION@ Downloads</h2>
 
+<p>
+  <strong><a href="#mtools">mtools</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#mcr">MCR</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#previous">Previous versions</a> </strong></p>
+
 <ul>
 <li>
 <p>OMERO.mtools is a suite of tools written in MATLAB for various analyses of images stored in an OMERO server. Please see the <a href="https://www.openmicroscopy.org/site/products/partner/omero.mtools">Product page</a> for information.</p></li>
@@ -51,7 +54,7 @@
 </li>
 </ul>
 
-<h2>OMERO.mtools downloads</h2>
+<h2><a name="mtools" id="mtools"></a>OMERO.mtools downloads</h2>
 <div class="alt-table">
   <table width="800" border="0" cellpadding="5">
     <tbody>
@@ -77,7 +80,7 @@
   </table>
 </div>
 
-<h2>MCR downloads</h2>
+<h2><a name="mcr" id="mcr"></a>MCR downloads</h2>
 <div class="alt-table">
   <table width="269" border="0" cellpadding="5">
     <tbody>
@@ -94,7 +97,7 @@
   </table>
 </div>
 
-<h2><a name="legacy" id="legacy"></a>Legacy versions</h2>
+<h2><a name="previous" id="previous"></a>Previous versions</h2>
 
 <ul>
   <li>
