mtools -> OMERO.mtools

--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -41,7 +41,7 @@
 <h2>OMERO.mtools @VERSION@ Downloads</h2>
 
 <p>
-  <strong><a href="#mtools">mtools</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#mcr">MCR</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#previous">Previous versions</a> </strong></p>
+  <strong><a href="#mtools">OMERO.mtools</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#mcr">MCR</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#previous">Previous versions</a> </strong></p>
 
 <ul>
 <li>
