--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -126,7 +126,7 @@
 
 <ul>
   <li>
-  <p>The Bio-Formtats API documentation is also available to read on the web <a href="api">here</a></p>
+  <p>The Bio-Formats API documentation is also available to read on the web <a href="api">here</a></p>
   </li>
 </ul>
 
