Adding table summaries

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -86,7 +86,8 @@
                 <h2><a name="tools" id="tools"></a>Bio-Formats tools
                     downloads</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5">
+                    <table width="800" border="0" cellpadding="5" summary="Bio-Formats tools
+                    downloads">
                         <tbody>
                             <tr>
                                 <th width="269">Clients</th>
@@ -159,7 +160,8 @@
                 <h2><a name="api" id="api"></a>Bio-Formats API
                     documentation</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5">
+                    <table width="800" border="0" cellpadding="5" summary="Bio-Formats API
+                    documentation">
                         <tbody>
                             <tr>
                                 <th width="269">API Documentation</th>
@@ -189,7 +191,8 @@
                 <h2><a name="components" id="components"></a>Bio-Formats
                     components downloads</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5">
+                    <table width="800" border="0" cellpadding="5" summary="Bio-Formats
+                    components downloads">
                         <tbody>
                             <tr>
                                 <th width="180">Project</th>
@@ -367,7 +370,7 @@
                 </div>
                 <h2><a name="code" id="code"></a>Source code</h2>
                 <div class="alt-table">
-                    <table width="278" border="0" cellpadding="5">
+                    <table width="278" border="0" cellpadding="5" summary="Source code">
                         <tbody>
                             <tr>
                                 <th width="264">Source Code</th>
