--- a/flimfit_downloads.html
+++ b/flimfit_downloads.html
@@ -110,7 +110,7 @@
                 <h2><a name="flimfit_50" id="flimfit_50"></a>FLIMfit downloads
                     for OMERO 5.0.x</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5">
+                    <table width="800" border="0" cellpadding="5" summary="FLIMfit for OMERO 5.0.x Downloads">
                         <tbody>
                             <tr>
                                 <th width="269">Clients</th>
@@ -135,7 +135,7 @@
                 <h2><a name="flimfit_44" id="flimfit_44"></a>FLIMfit downloads
                     for OMERO 4.4.x</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5">
+                    <table width="800" border="0" cellpadding="5"summary="FLIMfit for OMERO 4.4.x Downloads">
                         <tbody>
                             <tr>
                                 <th width="269">Clients</th>
@@ -159,7 +159,7 @@
                 </div>
                 <h2><a name="code" id="code"></a>Checking out the code</h2>
                 <div class="alt-table">
-                    <table width="278" border="0" cellpadding="5">
+                    <table width="278" border="0" cellpadding="5" summary="FLIMfit Source Code">
                         <tbody>
                             <tr>
                                 <th width="264">Source Code Links</th>
