--- a/images/flimfit_downloads.html
+++ b/images/flimfit_downloads.html
@@ -81,7 +81,7 @@
                 <h2><a name="flimfit_50" id="flimfit_50"></a>FLIMFit downloads
                     for OME 5.0.x</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5">
+                    <table width="800" border="0" cellpadding="5" summary="FLIMfit for OMERO 5.0.x Downloads">
                         <tbody>
                             <tr>
                                 <th width="269">Clients</th>
@@ -117,7 +117,7 @@
                 <h2><a name="flimfit_44" id="flimfit_44"></a>FLIMFit downloads
                     for OME 4.4.x</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5">
+                    <table width="800" border="0" cellpadding="5" summary="FLIMfit for OMERO 4.4.x Downloads">
                         <tbody>
                             <tr>
                                 <th width="269">Clients</th>
