--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -85,7 +85,7 @@
                 </ul>
                 <h2><a name="mtools" id="mtools"></a>OMERO.mtools downloads</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5">
+                    <table width="800" border="0" cellpadding="5" summary="OMERO.mtools downloads">
                         <tbody>
                             <tr>
                                 <th width="269">Clients</th>
@@ -118,7 +118,7 @@
                 </div>
                 <h2><a name="mcr" id="mcr"></a>MCR downloads</h2>
                 <div class="alt-table">
-                    <table width="269" border="0" cellpadding="5">
+                    <table width="269" border="0" cellpadding="5" summary="MCR downloads">
                         <tbody>
                             <tr>
                                 <th width="269">MCR</th>
