--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -106,7 +106,7 @@
                 <h2><a name="clients" id="clients"></a>OMERO client
                     downloads</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5">
+                    <table width="800" border="0" cellpadding="5" summary="OMERO client downloads">
                         <tbody>
                             <tr>
                                 <th width="269">Clients</th>
@@ -169,7 +169,7 @@
                 <h2><a name="plugins" id="plugins"></a>OMERO plugin
                     downloads</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5">
+                    <table width="800" border="0" cellpadding="5" summary="OMERO plugin downloads">
                         <tbody>
                             <tr>
                                 <th width="269">Plugins</th>
@@ -235,7 +235,7 @@
                 <h2><a name="servers" id="servers"></a>OMERO server @VERSION@
                     downloads</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5">
+                    <table width="800" border="0" cellpadding="5" summary="OMERO server downloads">
                         <tbody>
                             <tr>
                                 <th width="269">Servers</th>
@@ -308,7 +308,7 @@
                 <h2><a name="va" id="va"></a>OMERO Virtual Appliance
                     download</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5">
+                    <table width="800" border="0" cellpadding="5" summary="OMERO Virtual Appliance downloads">
                         <tbody>
                             <tr>
                                 <th width="269">Virtual Appliance</th>
@@ -342,7 +342,7 @@
                 </ul>
                 <h2><a name="api" id="api"></a>OMERO API documentation</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5">
+                    <table width="800" border="0" cellpadding="5" summary="OMERO API documentation">
                         <tbody>
                             <tr>
                                 <th width="269">API Documentation</th>
@@ -376,7 +376,7 @@
                 </ul>
                 <h2><a name="code" id="code"></a>Checking out the code</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5">
+                    <table width="800" border="0" cellpadding="5" summary="OMERO Code">
                         <tbody>
                             <tr>
                                 <th width="269">Source Code</th>
@@ -397,7 +397,7 @@
                     </table>
                 </div>
                 <div class="alt-table">
-                    <table width="278" border="0" cellpadding="5">
+                    <table width="278" border="0" cellpadding="5" summary="OMERO Code Links">
                         <tbody>
                             <tr>
                                 <th width="264">Source Code Links</th>
