--- a/utrack_downloads.html
+++ b/utrack_downloads.html
@@ -65,7 +65,7 @@
                 </ul>
                 <h2><a name="code" id="code"></a>Downloads</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5">
+                    <table width="800" border="0" cellpadding="5" summary="Downloads">
                         <tbody>
                             <tr>
                                 <th width="269">Source Code</th>
