--- a/searcher_downloads.html
+++ b/searcher_downloads.html
@@ -82,7 +82,7 @@
                 </ul>
                 <h2>Downloads</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5">
+                    <table width="800" border="0" cellpadding="5" summary="Downloads">
                         <tbody>
                             <tr>
                                 <th width="269">File</th>
