Add button to Bio-Formats source code under downloads.oo.org

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -368,10 +368,31 @@
                 </div>
                 <h2><a name="code" id="code"></a>Source code</h2>
                 <div class="alt-table">
-                    <table width="278" border="0" cellpadding="5" summary="Source code">
+                    <table width="800" border="0" cellpadding="5" summary="Bio-Formats Code">
                         <tbody>
                             <tr>
-                                <th width="264">Source Code</th>
+                                <th width="269">Source Code</th>
+                                <th width="91">Size</th>
+                                <th width="270">File Name</th>
+                                <th width="120">Checksum</th>
+                            </tr>
+                            <tr>
+                                <td><a href="@SOURCE_CODE@" target="_blank"><img
+                                        src="images/ome_source_code.png"
+                                        alt="Zipped Source Code" /></a></td>
+                                <td align="center">@SOURCE_CODE_SIZE@</td>
+                                <td>@SOURCE_CODE_BASE@</td>
+                                <td align="center">@SOURCE_CODE_MD5@ (<a
+                                        href="@SOURCE_CODE@.md5">MD5</a>)</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="alt-table">
+                    <table width="278" border="0" cellpadding="5" summary="Bio-Formats Code links">
+                        <tbody>
+                            <tr>
+                                <th width="264">Source Code Links</th>
                             </tr>
                             <tr>
                                 <td><a
