Restore Windows zips in the FLIMfit downloads page

--- a/flimfit_downloads.html
+++ b/flimfit_downloads.html
@@ -119,6 +119,17 @@
                                         href="@FLIMFIT_50_MAC@.md5"
                                     >MD5</a>)</td>
                             </tr>
+                            <tr>
+                                <td><a href="@FLIMFIT_50_WIN@"><img
+                                        src="images/flimfit_win.png"
+                                        alt="Windows Client Download"
+                                     /></a></td>
+                                <td align="center">@FLIMFIT_50_WIN_SIZE@</td>
+                                <td>@FLIMFIT_50_WIN_BASE@</td>
+                                <td align="center">@FLIMFIT_50_WIN_MD5@ (<a
+                                        href="@FLIMFIT_50_WIN@.md5"
+                                    >MD5</a>)</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -142,6 +153,17 @@
                                 <td>@FLIMFIT_44_MAC_BASE@</td>
                                 <td align="center">@FLIMFIT_44_MAC_MD5@ (<a
                                         href="@FLIMFIT_44_MAC@.md5"
+                                    >MD5</a>)</td>
+                            </tr>
+                            <tr>
+                                <td><a href="@FLIMFIT_44_WIN@"><img
+                                        src="images/flimfit_win.png"
+                                        alt="Windows Client Download"
+                                     /></a></td>
+                                <td align="center">@FLIMFIT_44_WIN_SIZE@</td>
+                                <td>@FLIMFIT_44_WIN_BASE@</td>
+                                <td align="center">@FLIMFIT_44_WIN_MD5@ (<a
+                                        href="@FLIMFIT_44_WIN@.md5"
                                     >MD5</a>)</td>
                             </tr>
                         </tbody>
