Add #py section

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -63,7 +63,8 @@
                             href="#additional"
                             >Additional</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
                             href="#servers"
-                            >Servers</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#va"
+                            >Servers</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#py"
+                            >Python</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#va"
                             >Virtual Appliance</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
                             href="#api">API</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
                             href="#code">Code</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
@@ -301,6 +302,56 @@
                         <p>Server upgrade instructions are at: <a
                                 href="@DOC_URL@/sysadmins/server-upgrade.html"
                                 >OMERO.server upgrade</a></p>
+                    </li>
+                </ul>
+                <h2><a name="py" id="py"></a>OMERO python @VERSION@
+                    downloads</h2>
+                <div class="alt-table">
+                    <table width="800" border="0" cellpadding="5" summary="OMERO python downloads">
+                        <tbody>
+                            <tr>
+                                <th width="269">Package</th>
+                                <th width="89">Size</th>
+                                <th width="270">File Name</th>
+                                <th width="122">Checksum</th>
+                            </tr>
+                            <tr>
+                                <td><a href="@PYTHON33@"><img
+                                        src="images/ice3_3_download.png"
+                                        alt="Ice 3.3 Python Download"
+                                     /></a></td>
+                                <td align="center">@PYTHON33_SIZE@</td>
+                                <td>@PYTHON33_BASE@</td>
+                                <td align="center">@PYTHON33_MD5@ (<a
+                                        href="@PYTHON33@.md5">MD5</a>)</td>
+                            </tr>
+                            <tr>
+                                <td><a href="@PYTHON34@"><img
+                                        src="images/ice3_4_download.png"
+                                        alt="Ice 3.4 Python Download"
+                                     /></a></td>
+                                <td align="center">@PYTHON34_SIZE@</td>
+                                <td>@PYTHON34_BASE@</td>
+                                <td align="center">@PYTHON34_MD5@ (<a
+                                        href="@PYTHON34@.md5">MD5</a>)</td>
+                            </tr>
+                            <tr>
+                                <td><a href="@PYTHON35@"><img
+                                        src="images/ice3_5_download_linux.png"
+                                        alt="Ice 3.5 Python Download"
+                                     /></a></td>
+                                <td align="center">@PYTHON35_SIZE@</td>
+                                <td>@PYTHON35_BASE@</td>
+                                <td align="center">@PYTHON35_MD5@ (<a
+                                        href="@PYTHON35@.md5">MD5</a>)</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <ul>
+                    <li>
+                        <p>Download the Python matching the Ice version you are
+                           using.</p>
                     </li>
                 </ul>
                 <h2><a name="va" id="va"></a>OMERO Virtual Appliance
