Fix replace error by adding 'bundle'

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -350,7 +350,7 @@
                 </div>
                 <ul>
                     <li>
-                        <p>Download the Python matching the Ice version you are
+                        <p>Download the Python bundle matching the Ice version you are
                            using.</p>
                     </li>
                 </ul>
