Ice 3.5 supported for Windows

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -250,7 +250,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@SERVER35@"><img
-                                        src="images/ice3_5_download_linux.png"
+                                        src="images/ice3_5_download.png"
                                         alt="Ice 3.5 Server Download"
                                      /></a></td>
                                 <td align="center">@SERVER35_SIZE@</td>
@@ -262,15 +262,6 @@
                     </table>
                 </div>
                 <ul>
-                    <li>
-                        <p>If you are using Windows, we recommend you default to
-                            using OMERO.server with Ice 3.4. The Ice 3.5 server
-                            is not supported on Windows because Ice 3.5 requires
-                            Python 3, which OMERO does not yet support (see the
-                                <a
-                                href="@DOC_URL@/sysadmins/limitations.html#windows-os-issues"
-                                >Known Limitations</a> page for more detail)</p>
-                    </li>
                     <li>
                         <p>Download the server matching the Ice version you are
                             using (note that the client(s) should work with any
