Updating server download buttons

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -243,7 +243,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@SERVER33@"><img
-                                        src="images/ice3_3_download.png"
+                                        src="images/ice_3_3_server.png"
                                         alt="Ice 3.3 Server Download"
                                      /></a></td>
                                 <td align="center">@SERVER33_SIZE@</td>
@@ -253,7 +253,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@SERVER34@"><img
-                                        src="images/ice3_4_download.png"
+                                        src="images/ice_3_4_server.png"
                                         alt="Ice 3.4 Server Download"
                                      /></a></td>
                                 <td align="center">@SERVER34_SIZE@</td>
@@ -263,7 +263,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@SERVER35@"><img
-                                        src="images/ice3_5_download.png"
+                                        src="images/ice_3_5_server.png"
                                         alt="Ice 3.5 Server Download"
                                      /></a></td>
                                 <td align="center">@SERVER35_SIZE@</td>
