Move to python icons

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -307,7 +307,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@PYTHON33@"><img
-                                        src="images/ice3_3_download.png"
+                                        src="images/python_3_3.png"
                                         alt="Ice 3.3 Python Download"
                                      /></a></td>
                                 <td align="center">@PYTHON33_SIZE@</td>
@@ -317,7 +317,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@PYTHON34@"><img
-                                        src="images/ice3_4_download.png"
+                                        src="images/python_3_4.png"
                                         alt="Ice 3.4 Python Download"
                                      /></a></td>
                                 <td align="center">@PYTHON34_SIZE@</td>
@@ -327,7 +327,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@PYTHON35@"><img
-                                        src="images/ice3_5_download_linux.png"
+                                        src="images/python_3_5.png"
                                         alt="Ice 3.5 Python Download"
                                      /></a></td>
                                 <td align="center">@PYTHON35_SIZE@</td>
