Remove version number from server heading

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -227,7 +227,7 @@
                                 target="_blank">Script Sharing</a></p>
                     </li>
                 </ul>
-                <h2><a name="servers" id="servers"></a>OMERO server @VERSION@
+                <h2><a name="servers" id="servers"></a>OMERO server
                     downloads</h2>
                 <div class="alt-table">
                     <table width="800" border="0" cellpadding="5" summary="OMERO server downloads">
