--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -369,8 +369,7 @@
                                 href="#components">build components</a></p>
                     </li>
                 </ul>
-                <h2><a name="py" id="py"></a>OMERO python @VERSION@
-                    downloads</h2>
+                <h2><a name="py" id="py"></a>OMERO python downloads</h2>
                 <div class="alt-table">
                     <table width="800" border="0" cellpadding="5" summary="OMERO python downloads">
                         <tbody>
