Adding link to Ice 3.5 downloads for Windows

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -281,6 +281,13 @@
                             version of the server)</p>
                     </li>
                     <li>
+                        <p>If you want to use Ice 3.5 with Windows, you can
+                            download a version built against Python 2.7 from our
+                            <a
+                            href="http://downloads.openmicroscopy.org/ice/3.5.1/"
+                            >Ice downloads page</a> </p>
+                    </li>
+                    <li>
                         <p>Installation instructions are available for: <a
                                 href="@DOC_URL@/sysadmins/unix/server-installation.html"
                                 >Unix platforms</a>, <a
