Replace buttons by hyperlinks

--- a/ice_downloads.html
+++ b/ice_downloads.html
@@ -58,40 +58,27 @@
 	                        &nbsp;&nbsp;|&nbsp;&nbsp;
 	                        <a href="#code">Code</a>&nbsp;&nbsp;|&nbsp;&nbsp;
                     </strong></p>
-                <ul>
-                    <li>
-                        <p>Here a note about. </p>
-                    </li>
-
-                </ul>
                 <h2><a name="ice" id="ice"></a>Ice downloads for Windows</h2>
                 <div class="alt-table">
                     <table width="800" border="0" cellpadding="5" summary="Ice Downloads for Windows">
                         <tbody>
                             <tr>
-                                <th width="269">Clients</th>
+                                <th width="580">Downloads</th>
                                 <th width="85">Size</th>
-                                <th width="271">File Name</th>
                                 <th width="125">Checksum</th>
                             </tr>
                             <tr>
-                                <td><a href="@ICE_X64_WIN@"><img
-                                        src="images/ome_source_code.png"
-                                        alt="Ice Windows x64 Download"
-                                     /></a></td>
+                                <td><a href="@ICE_X64_WIN@">
+	                                   64-bit Ice for Windows x64 with 64-bit 
+	                                   Python 2.7</a></td>
                                 <td align="center">@ICE_X64_WIN_SIZE@</td>
-                                <td>@ICE_X64_WIN_BASE@</td>
                                 <td align="center">@ICE_X64_WIN_MD5@ (<a
                                         href="@ICE_X64_WIN@.md5"
                                     >MD5</a>)</td>
                             </tr>
                             <tr>
-                                <td><a href="@ICE_X86_WIN@"><img
-                                        src="images/ome_source_code.png"
-                                        alt="Windows Client Download"
-                                     /></a></td>
+                                <td><a href="@ICE_X86_WIN@">32-bit Ice for Windows x86 with 32-bit Python 2.7;</a></td>
                                 <td align="center">@ICE_X86_WIN_SIZE@</td>
-                                <td>@ICE_X86_WIN_BASE@</td>
                                 <td align="center">@ICE_X86_WIN_MD5@ (<a
                                         href="@ICE_X86_WIN@.md5"
                                     >MD5</a>)</td>
@@ -104,26 +91,19 @@
 	                    <table width="800" border="0" cellpadding="5" summary="OMERO Code">
 	                        <tbody>
 	                            <tr>
-	                                <th width="269">Source Code</th>
-	                                <th width="91">Size</th>
-	                                <th width="270">File Name</th>
-	                                <th width="120">Checksum</th>
+	                                <th width="580">Downloads</th>
+	                                <th width="85">Size</th>
+	                                <th width="125">Checksum</th>
 	                            </tr>
 	                            <tr>
-	                                <td><a href="@SOURCE_CODE@" target="_blank"><img
-	                                        src="images/ome_source_code.png"
-	                                        alt="Zipped Source Code" /></a></td>
+	                                <td><a href="@SOURCE_CODE@" target="_blank">Ice source code</a></td>
 	                                <td align="center">@SOURCE_CODE_SIZE@</td>
-	                                <td>@SOURCE_CODE_BASE@</td>
 	                                <td align="center">@SOURCE_CODE_MD5@ (<a
 	                                        href="@SOURCE_CODE@.md5">MD5</a>)</td>
 	                            </tr>
 	                            <tr>
-	                                <td><a href="@THIRD_PARTY@" target="_blank"><img
-	                                        src="images/ome_source_code.png"
-	                                        alt="Zipped Third Party Source Code" /></a></td>
+	                                <td><a href="@THIRD_PARTY@" target="_blank">Ice Third Party Source Code</a></td>
 	                                <td align="center">@THIRD_PARTY_SIZE@</td>
-	                                <td>@THIRD_PARTY_BASE@</td>
 	                                <td align="center">@THIRD_PARTY_MD5@ (<a
 	                                        href="@SOURCE_CODE@.md5">MD5</a>)</td>
 	                            </tr>
