--- a/ice_downloads.html
+++ b/ice_downloads.html
@@ -77,7 +77,7 @@
                                     >MD5</a>)</td>
                             </tr>
                             <tr>
-                                <td><a href="@ICE_X86_WIN@">32-bit Ice for Windows x86 with 32-bit Python 2.7;</a></td>
+                                <td><a href="@ICE_X86_WIN@">32-bit Ice for Windows x86 with 32-bit Python 2.7</a></td>
                                 <td align="center">@ICE_X86_WIN_SIZE@</td>
                                 <td align="center">@ICE_X86_WIN_MD5@ (<a
                                         href="@ICE_X86_WIN@.md5"
