Use lowercase for source code hyperlinks

--- a/ice_downloads.html
+++ b/ice_downloads.html
@@ -102,7 +102,7 @@
 	                                        href="@SOURCE_CODE@.md5">MD5</a>)</td>
 	                            </tr>
 	                            <tr>
-	                                <td><a href="@THIRD_PARTY@" target="_blank">Ice Third Party Source Code</a></td>
+	                                <td><a href="@THIRD_PARTY@" target="_blank">Ice third party source code</a></td>
 	                                <td align="center">@THIRD_PARTY_SIZE@</td>
 	                                <td align="center">@THIRD_PARTY_MD5@ (<a
 	                                        href="@SOURCE_CODE@.md5">MD5</a>)</td>
