Use Source code  everywhere

--- a/ice_downloads.html
+++ b/ice_downloads.html
@@ -56,7 +56,8 @@
                 <p>
                     <strong><a href="#win">Windows downloads</a>
 	                        &nbsp;&nbsp;|&nbsp;&nbsp;
-	                        <a href="#code">Code</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+	                        <a href="#code">Source code</a>
+	                        &nbsp;&nbsp;|&nbsp;&nbsp;
                     </strong></p>
                 <h2><a name="ice" id="ice"></a>Ice downloads for Windows</h2>
                 <div class="alt-table">
@@ -86,7 +87,7 @@
                         </tbody>
                     </table>
                 </div>    
-				<h2><a name="code" id="code"></a>Checking out the code</h2>
+				<h2><a name="code" id="code"></a>Source code</h2>
 	                <div class="alt-table">
 	                    <table width="800" border="0" cellpadding="5" summary="OMERO Code">
 	                        <tbody>
