Still recommending Ice 34 for Windows

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -281,9 +281,10 @@
                             version of the server)</p>
                     </li>
                     <li>
-                        <p>If you want to use Ice 3.5 with Windows, you can
-                            download a version built against Python 2.7 from our
-                            <a
+                        <p>If you are using Windows, we are still recommending
+                            Ice 3.4 at this stage, but if you want to try Ice
+                            3.5, you can download a version built
+                            against Python 2.7 from our <a
                             href="http://downloads.openmicroscopy.org/ice/3.5.1/"
                             >Ice downloads page</a> </p>
                     </li>
