Hopefully improving Ice 35 for Windows wording

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -281,12 +281,13 @@
                             version of the server)</p>
                     </li>
                     <li>
-                        <p>If you are using Windows, we are still recommending
-                            Ice 3.4 at this stage, but if you want to try Ice
-                            3.5, you can download a version built
-                            against Python 2.7 from our <a
+                        <p>If you are using Windows, we recommend you default to
+                            using OMERO.server with Ice 3.4. However, you can
+                            download an Ice 3.5
+                            version built against Python 2.7 from our <a
                             href="http://downloads.openmicroscopy.org/ice/3.5.1/"
-                            >Ice downloads page</a> </p>
+                            >Ice downloads page</a> which will allow you to
+                            install the OMERO.server Ice 3.5 version if you wish</p>
                     </li>
                     <li>
                         <p>Installation instructions are available for: <a
