Fix typo in ANNOUNCEMENT_URL environment variable

--- a/figure_downloads.html
+++ b/figure_downloads.html
@@ -57,7 +57,7 @@
                 <ul>
                     <li>
                         <p>Information on this release of OMERO.figure is in the
-                                <a href="@ANNOUCEMENT_URL@">release
+                                <a href="@ANNOUNCEMENT_URL@">release
                                 announcement</a>. </p>
                     </li>
 
