--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -71,7 +71,7 @@
                 <ul>
                     <li>
                         <p>Information on this release of OMERO is in the <a
-                                href="@ANNOUCEMENT_URL@">release
+                                href="@ANNOUNCEMENT_URL@">release
                                 announcement</a></p>
                     </li>
 
