--- a/webtagging_downloads.html
+++ b/webtagging_downloads.html
@@ -57,7 +57,7 @@
                 <ul>
                     <li>
                         <p>Information on this release of OMERO.webtagging is in
-                            the <a href="@ANNOUCEMENT_URL@">release
+                            the <a href="@ANNOUNCEMENT_URL@">release
                                 announcement</a>. </p>
                     </li>
 
