--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -360,9 +360,9 @@
                                 href="#components">build components</a></p>
                     </li>
                 </ul>
-                <h2><a name="py" id="py"></a>OMERO python downloads</h2>
+                <h2><a name="py" id="py"></a>OMERO Python downloads</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5" summary="OMERO python downloads">
+                    <table width="800" border="0" cellpadding="5" summary="OMERO Python downloads">
                         <tbody>
                             <tr>
                                 <th width="269">Package</th>
