--- a/flimfit_downloads.html
+++ b/flimfit_downloads.html
@@ -62,7 +62,7 @@
                 <ul>
                     <li>
                         <p>Please note that this version of FLIMfit is compatible
-                        with OMERO 5.0 servers. If you require compatibilty with
+                        with OMERO 5.0 servers. If you require compatibility with
                         an OMERO 4.4 server, earlier versions are available from
                         the main <a
                         href="http://downloads.openmicroscopy.org/flimfit/?C=M;O=D"
@@ -78,7 +78,8 @@
                         you do not, or are in any doubt, please also
                         download the MCR for your platform <a href="#mcr">
                             below</a>. The Windows Installer will
-                        automatically install the MCR. </p>
+                        automatically install the MCR.
+                        The link below to the Windows MCR is provided only in case of problems.  </p>
                     </li>
 
                     <li>
