--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -187,7 +187,7 @@
                             to read on the web <a href="api/">here</a></p>
                     </li>
                 </ul>
-                <h2><a name="cpp" id="api"></a>Bio-Formats C++ downloads</h2>
+                <h2><a name="cpp" id="cpp"></a>Bio-Formats C++ downloads</h2>
                 <div class="alt-table">
                     <table width="800" border="0" cellpadding="5" summary="Bio-Formats C++
                     downloads">
