Use new icons for BF C++ binary downloads

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -209,7 +209,7 @@
 		                     </tr>
 		                     <tr>
                                 <td><a href="@CPP_CENTOS65@"><img
-                                        src="images/ome_source_code.png"
+                                        src="images/bf_c++_centos_6_5.png"
                                         alt="CentOS 6.5 C++ binaries"
                                      /></a></td>
                                 <td align="center">@CPP_CENTOS65_SIZE@</td>
@@ -219,7 +219,7 @@
                              </tr>
 		                     <tr>
                                 <td><a href="@CPP_OSX108@"><img
-                                        src="images/ome_source_code.png"
+                                        src="images/bf_c++_mac_10_8.png"
                                         alt="OS X 10.8 C++ binaries"
                                      /></a></td>
                                 <td align="center">@CPP_OSX108_SIZE@</td>
@@ -229,7 +229,7 @@
                             </tr>
 		                    <tr>
                                 <td><a href="@CPP_OSX109@"><img
-                                        src="images/ome_source_code.png"
+                                        src="images/bf_c++_mac_10_9.png"
                                         alt="OS X 10.9 C++ binaries"
                                      /></a></td>
                                 <td align="center">@CPP_OSX109_SIZE@</td>
