Use long icons across the board

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -85,8 +85,8 @@
                 <h2><a name="tools" id="tools"></a>Bio-Formats tools
                     downloads</h2>
                 <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5" summary="Bio-Formats tools
-                    downloads">
+                    <table width="800" border="0" cellpadding="5" 
+						   summary="Bio-Formats tools downloads">
                         <tbody>
                             <tr>
                                 <th width="269">Clients</th>
@@ -462,18 +462,18 @@
                                 <td><a
                                         href="http://github.com/openmicroscopy/bioformats"
                                         target="_blank"><img
-                                        src="images/github_rep_link.png"
+                                        src="images/bf_gh_repo.png"
                                         alt="GitHub Repository Link" /></a></td>
                             </tr>
                             <tr>
                                 <td><a href="http://git.openmicroscopy.org/"
                                         target="_blank"><img
-                                        src="images/gitweb_int_link.png"
+                                        src="images/bf_gh_web.png"
                                         alt="Gitweb Interface Link" /></a></td>
                             </tr>
                             <tr>
                                 <td><a href="@TAG_URL@" target="_blank"><img
-                                        src="images/git_tag.png"
+                                        src="images/bf_gh_tag.png"
                                         alt="GitHub Tag" /></a></td>
                             </tr>
                         </tbody>
