Split OS X clients on the downloads page by Java version

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -128,14 +128,24 @@
                                         href="@WIN_CLIENTS@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
-                                <td><a href="@MAC_CLIENTS@"><img
+                                <td><a href="@MAC_JAVA7+_CLIENTS@"><img
+                                        src="images/mac_download.png"
+                                        alt="Mac OS X (Java 7+) Client Download"
+                                     /></a></td>
+                                <td align="center">@MAC_JAVA7+_CLIENTS_SIZE@</td>
+                                <td>@MAC_JAVA7+_CLIENTS_BASE@</td>
+                                <td align="center">@MAC_JAVA7+_CLIENTS_SHA1@ (<a
+                                        href="@MAC_JAVA7+_CLIENTS@.sha1">SHA1</a>)</td>
+                            </tr>
+                            <tr>
+                                <td><a href="@MAC_JAVA6_CLIENTS@"><img
                                         src="images/mac_download.png"
                                         alt="Mac OS X Client Download"
                                      /></a></td>
-                                <td align="center">@MAC_CLIENTS_SIZE@</td>
-                                <td>@MAC_CLIENTS_BASE@</td>
-                                <td align="center">@MAC_CLIENTS_SHA1@ (<a
-                                        href="@MAC_CLIENTS@.sha1">SHA1</a>)</td>
+                                <td align="center">@MAC_JAVA6_CLIENTS_SIZE@</td>
+                                <td>@MAC_JAVA6_CLIENTS_BASE@</td>
+                                <td align="center">@MAC_JAVA6_CLIENTS_SHA1@ (<a
+                                        href="@MAC_JAVA6_CLIENTS@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@LINUX_CLIENTS@"><img
