Replace OS X clients downloads icons

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -122,7 +122,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@MAC_JAVA7+_CLIENTS@"><img
-                                        src="images/mac_download.png"
+                                        src="images/mac_download_java7.png"
                                         alt="Mac OS X (Java 7+) Client Download"
                                      /></a></td>
                                 <td align="center">@MAC_JAVA7+_CLIENTS_SIZE@</td>
@@ -132,7 +132,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@MAC_JAVA6_CLIENTS@"><img
-                                        src="images/mac_download.png"
+                                        src="images/mac_download_java6.png"
                                         alt="Mac OS X Client Download"
                                      /></a></td>
                                 <td align="center">@MAC_JAVA6_CLIENTS_SIZE@</td>
