Add explanatory sentence for Mac OS X downloads
Also separate the OMERO.web sentence

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -164,11 +164,18 @@
                         <p>Each client package includes <a
                                 href="@DOC_URL@/users/clients-overview.html#omero-insight"
                                 >OMERO.insight</a> and <a
-                                href="@DOC_URL@/users/clients-overview.html#omero-importer"
-                                >OMERO.importer</a> and requires Java Version
-                                <strong>1.6</strong> or higher. OMERO.web is
-                            part of the server package, so individual users do
-                            not need to install it locally.</p>
+                                href="@DOC_URL@/users/clients-overview.html#omero-importer">OMERO.importer</a>  
+                                and requires Java Version <strong>1.6</strong> 
+                                or higher.</p>
+                    </li>
+                    <li>
+                        <p> Mac OS X users should use the clients matching
+                            their installed Java version.</p>
+                    </li>
+                    <li>
+                        <p> OMERO.web is part of the server package, so
+                            individual users do not need to install it
+                            locally.</p>
                     </li>
                     <li>
                         <p>Full instructions for installing the clients are on
