Improve OS X clients usage sentence

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -165,7 +165,10 @@
                     </li>
                     <li>
                         <p> Mac OS X users should use the clients matching
-                            their installed Java version.</p>
+                            their installed Java version. MacOS X 10.7 and
+                            later should install the latest Java and use the
+                            Java7+ downloads. MacOS X 10.6 users can only use
+                            the Java6 download.</p>
                     </li>
                     <li>
                         <p> OMERO.web is part of the server package, so
