--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -172,9 +172,9 @@
                         <p> Mac OS X users should use the clients matching
                             their installed Java version. MacOS X 10.7 and
                             later should install the <a href ="http://www.oracle.com/technetwork/java/javase/downloads/index.html"
-							>latest Java</a> and use the
-                            Java 7+ downloads. MacOS X 10.6 users can only use
-                            the Java 6 download.</p>
+                            >latest Java Runtime Environment (JRE)</a> and use
+                            the Java 7+ downloads. MacOS X 10.6 users can only
+                            use the Java 6 download.</p>
                     </li>
                     <li>
                         <p> OMERO.web is part of the server package, so
