Expand Bio-Formats C++ matrix

--- a/libbioformats_downloads.html
+++ b/libbioformats_downloads.html
@@ -90,14 +90,24 @@
                                 <th width="125">SHA1 Checksum</th>
                             </tr>
 		                     <tr>
-                                <td><a href="@CPP_CENTOS65@"><img
+                                <td><a href="@CENTOS65_RELEASE@"><img
                                         src="images/bf_c++_centos_6_5.png"
-                                        alt="CentOS 6.5 C++ binaries"
+                                        alt="CentOS 6.5 C++ Release binaries"
                                      /></a></td>
-                                <td align="center">@CPP_CENTOS65_SIZE@</td>
-                                <td>@CPP_CENTOS65_BASE@</td>
-                                <td align="center">@CPP_CENTOS65_SHA1@ (<a
-                                        href="@CPP_CENTOS65@.sha1">SHA1</a>)</td>
+                                <td align="center">@CENTOS65_RELEASE_SIZE@</td>
+                                <td>@CENTOS65_RELEASE_BASE@</td>
+                                <td align="center">@CENTOS65_RELEASE_SHA1@ (<a
+                                        href="@CENTOS65_RELEASE@.sha1">SHA1</a>)</td>
+                             </tr>
+		                     <tr>
+                                <td><a href="@CENTOS65_DEBUG@"><img
+                                        src="images/bf_c++_centos_6_5.png"
+                                        alt="CentOS 6.5 C++ Debug binaries"
+                                     /></a></td>
+                                <td align="center">@CENTOS65_DEBUG_SIZE@</td>
+                                <td>@CENTOS65_DEBUG_BASE@</td>
+                                <td align="center">@CENTOS65_DEBUG_SHA1@ (<a
+                                        href="@CENTOS65_DEBUG@.sha1">SHA1</a>)</td>
                              </tr>
                         </tbody>
                     </table>
@@ -144,14 +154,24 @@
                                 <th width="125">SHA1 Checksum</th>
                             </tr>
 		                     <tr>
-                                <td><a href="@CPP_OSX108@"><img
+                                <td><a href="@OSX108_RELEASE@"><img
                                         src="images/bf_c++_mac_10_8.png"
                                         alt="OS X 10.8 C++ binaries"
                                      /></a></td>
-                                <td align="center">@CPP_OSX108_SIZE@</td>
-                                <td>@CPP_OSX108_BASE@</td>
-                                <td align="center">@CPP_OSX108_SHA1@ (<a
-                                        href="@CPP_OSX108@.sha1">SHA1</a>)</td>
+                                <td align="center">@OSX108_RELEASE_SIZE@</td>
+                                <td>@OSX108_RELEASE_BASE@</td>
+                                <td align="center">@OSX108_RELEASE_SHA1@ (<a
+                                        href="@OSX108_RELEASE@.sha1">SHA1</a>)</td>
+                            </tr>
+		                    <tr>
+                                <td><a href="@OSX108_DEBUG@"><img
+                                        src="images/bf_c++_mac_10_8.png"
+                                        alt="OS X 10.8 C++ Debug binaries"
+                                     /></a></td>
+                                <td align="center">@OSX108_DEBUG_SIZE@</td>
+                                <td>@OSX108_DEBUG_BASE@</td>
+                                <td align="center">@OSX108_DEBUG_SHA1@ (<a
+                                        href="@OSX108_DEBUG@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
